INCLUDE_DIRECTORIES(../include)


LINK_DIRECTORIES(../network)
ADD_EXECUTABLE(masterd core.cc  ServerStoreRAM.cc  SessionHandler.cc  TorqueIO.cc)
TARGET_LINK_LIBRARIES(masterd network)

IF(SERVERSTORE_RAM)
	MESSAGE(STATUS "Using ServerStoreRAM")
	SET_TARGET_PROPERTIES(masterd PROPERTIES COMPILE_FLAGS -DSERVERSTORERAM)
ENDIF(SERVERSTORE_RAM)


